--- a/publish/mainlist_inc.html
+++ b/publish/mainlist_inc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mainlist_inc.html</title>
+    <title>mainlist_inc</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="./common/css/reset.css">
@@ -22,7 +22,7 @@
                     <div class="item_box">
                         <img src="./common/img/main_test_img1.jpg" alt="img1">
                         <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
                         </div>
                     </div>
                     <!-- 일반 타이틀(.cont) -->
@@ -77,7 +77,7 @@
                     <div class="item_box">
                         <img src="./common/img/main_test_img1.jpg" alt="img1">
                         <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
                         </div>
                     </div>
                     <div class="cont">
@@ -92,75 +92,7 @@
                     <div class="item_box">
                         <img src="./common/img/main_test_img1.jpg" alt="img1">
                         <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
-                        </div>
-                    </div>
-                    <div class="cont">
-                        <span class="item_title">나이키운동화</span>
-                        <span class="item_price">현재가<strong>20,000</strong>원</span>
-                    </div>    
-                </a>
-        </li>
-        <li class="main_con">
-            <div class="item_wrapper">
-                <a class="item_list" href="#">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <div class="dealer_position">
-                            <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
-                        </div>
-                    </div>
-                    <div class="cont">
-                        <span class="item_title">나이키운동화</span>
-                        <span class="item_price">현재가<strong>10,000</strong>원</span>
-                    </div>    
-                </a>
-            </div>
-        </li>
-        <li class="main_con">
-            <div class="item_wrapper">
-                <a class="item_list" href="#">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <div class="dealer_position">
-                            <img src="./common/img/auction_icon.svg" alt="auction_icon">
-                        </div>
-                    </div>
-                    <div class="cont_bid">
-                            <div class="bid_time">
-                                <span><i class="fas fa-stopwatch"></i>2/6 22:00</span>
-                            </div>
-                            <div class="bid_title">
-                                <span class="item_title">Nike</span>
-                                <span class="item_price">현재가<strong>20,000</strong>원</span>
-                                <span class="item_price_before">최초가&nbsp;50,000원</span>
-                            </div>
-                    </div>    
-                </a>
-            </div>
-        </li>
-        <li class="main_con">
-            <div class="item_wrapper">
-                <a class="item_list" href="#">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
-                        </div>
-                    </div>
-                    <div class="cont">
-                        <span class="item_title">나이키운동화</span>
-                        <span class="item_price">현재가<strong>20,000</strong>원</span>
-                    </div>    
-                </a>
-            </div>
-        </li>
-        <li class="main_con">
-                <a class="item_list" href="#">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
                         </div>
                     </div>
                     <div class="cont">
@@ -213,7 +145,7 @@
                     <div class="item_box">
                         <img src="./common/img/main_test_img1.jpg" alt="img1">
                         <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
                         </div>
                     </div>
                     <div class="cont">
@@ -228,75 +160,7 @@
                     <div class="item_box">
                         <img src="./common/img/main_test_img1.jpg" alt="img1">
                         <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
-                        </div>
-                    </div>
-                    <div class="cont">
-                        <span class="item_title">나이키운동화</span>
-                        <span class="item_price">현재가<strong>20,000</strong>원</span>
-                    </div>    
-                </a>
-        </li>
-        <li class="main_con">
-            <div class="item_wrapper">
-                <a class="item_list" href="#">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <div class="dealer_position">
-                            <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
-                        </div>
-                    </div>
-                    <div class="cont">
-                        <span class="item_title">나이키운동화</span>
-                        <span class="item_price">현재가<strong>10,000</strong>원</span>
-                    </div>    
-                </a>
-            </div>
-        </li>
-        <li class="main_con">
-            <div class="item_wrapper">
-                <a class="item_list" href="#">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <div class="dealer_position">
-                            <img src="./common/img/auction_icon.svg" alt="auction_icon">
-                        </div>
-                    </div>
-                    <div class="cont_bid">
-                            <div class="bid_time">
-                                <span><i class="fas fa-stopwatch"></i>2/6 22:00</span>
-                            </div>
-                            <div class="bid_title">
-                                <span class="item_title">Nike</span>
-                                <span class="item_price">현재가<strong>20,000</strong>원</span>
-                                <span class="item_price_before">최초가&nbsp;50,000원</span>
-                            </div>
-                    </div>    
-                </a>
-            </div>
-        </li>
-        <li class="main_con">
-            <div class="item_wrapper">
-                <a class="item_list" href="#">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
-                        </div>
-                    </div>
-                    <div class="cont">
-                        <span class="item_title">나이키운동화</span>
-                        <span class="item_price">현재가<strong>20,000</strong>원</span>
-                    </div>    
-                </a>
-            </div>
-        </li>
-        <li class="main_con">
-                <a class="item_list" href="#">
-                    <div class="item_box">
-                        <img src="./common/img/main_test_img1.jpg" alt="img1">
-                        <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
                         </div>
                     </div>
                     <div class="cont">
@@ -349,7 +213,143 @@
                     <div class="item_box">
                         <img src="./common/img/main_test_img1.jpg" alt="img1">
                         <div class="dealer_position">
-                            <img src="error.src" onerror="this.style.display='none'" alt="">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
+                        </div>
+                    </div>
+                    <div class="cont">
+                        <span class="item_title">나이키운동화</span>
+                        <span class="item_price">현재가<strong>20,000</strong>원</span>
+                    </div>    
+                </a>
+            </div>
+        </li>
+        <li class="main_con">
+                <a class="item_list" href="#">
+                    <div class="item_box">
+                        <img src="./common/img/main_test_img1.jpg" alt="img1">
+                        <div class="dealer_position">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
+                        </div>
+                    </div>
+                    <div class="cont">
+                        <span class="item_title">나이키운동화</span>
+                        <span class="item_price">현재가<strong>20,000</strong>원</span>
+                    </div>    
+                </a>
+        </li>
+        <li class="main_con">
+            <div class="item_wrapper">
+                <a class="item_list" href="#">
+                    <div class="item_box">
+                        <img src="./common/img/main_test_img1.jpg" alt="img1">
+                        <div class="dealer_position">
+                            <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
+                        </div>
+                    </div>
+                    <div class="cont">
+                        <span class="item_title">나이키운동화</span>
+                        <span class="item_price">현재가<strong>10,000</strong>원</span>
+                    </div>    
+                </a>
+            </div>
+        </li>
+        <li class="main_con">
+            <div class="item_wrapper">
+                <a class="item_list" href="#">
+                    <div class="item_box">
+                        <img src="./common/img/main_test_img1.jpg" alt="img1">
+                        <div class="dealer_position">
+                            <img src="./common/img/auction_icon.svg" alt="auction_icon">
+                        </div>
+                    </div>
+                    <div class="cont_bid">
+                            <div class="bid_time">
+                                <span><i class="fas fa-stopwatch"></i>2/6 22:00</span>
+                            </div>
+                            <div class="bid_title">
+                                <span class="item_title">Nike</span>
+                                <span class="item_price">현재가<strong>20,000</strong>원</span>
+                                <span class="item_price_before">최초가&nbsp;50,000원</span>
+                            </div>
+                    </div>    
+                </a>
+            </div>
+        </li>
+        <li class="main_con">
+            <div class="item_wrapper">
+                <a class="item_list" href="#">
+                    <div class="item_box">
+                        <img src="./common/img/main_test_img1.jpg" alt="img1">
+                        <div class="dealer_position">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
+                        </div>
+                    </div>
+                    <div class="cont">
+                        <span class="item_title">나이키운동화</span>
+                        <span class="item_price">현재가<strong>20,000</strong>원</span>
+                    </div>    
+                </a>
+            </div>
+        </li>
+        <li class="main_con">
+                <a class="item_list" href="#">
+                    <div class="item_box">
+                        <img src="./common/img/main_test_img1.jpg" alt="img1">
+                        <div class="dealer_position">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
+                        </div>
+                    </div>
+                    <div class="cont">
+                        <span class="item_title">나이키운동화</span>
+                        <span class="item_price">현재가<strong>20,000</strong>원</span>
+                    </div>    
+                </a>
+        </li>
+        <li class="main_con">
+            <div class="item_wrapper">
+                <a class="item_list" href="#">
+                    <div class="item_box">
+                        <img src="./common/img/main_test_img1.jpg" alt="img1">
+                        <div class="dealer_position">
+                            <img src="./common/img/delivery_icon.svg" alt="delivery_icon">
+                        </div>
+                    </div>
+                    <div class="cont">
+                        <span class="item_title">나이키운동화</span>
+                        <span class="item_price">현재가<strong>10,000</strong>원</span>
+                    </div>    
+                </a>
+            </div>
+        </li>
+        <li class="main_con">
+            <div class="item_wrapper">
+                <a class="item_list" href="#">
+                    <div class="item_box">
+                        <img src="./common/img/main_test_img1.jpg" alt="img1">
+                        <div class="dealer_position">
+                            <img src="./common/img/auction_icon.svg" alt="auction_icon">
+                        </div>
+                    </div>
+                    <div class="cont_bid">
+                            <div class="bid_time">
+                                <span><i class="fas fa-stopwatch"></i>2/6 22:00</span>
+                            </div>
+                            <div class="bid_title">
+                                <span class="item_title">Nike</span>
+                                <span class="item_price">현재가<strong>20,000</strong>원</span>
+                                <span class="item_price_before">최초가&nbsp;50,000원</span>
+                            </div>
+                    </div>    
+                </a>
+            </div>
+        </li>
+        <li class="main_con">
+            <div class="item_wrapper">
+                <a class="item_list" href="#">
+                    <div class="item_box">
+                        <img src="./common/img/main_test_img1.jpg" alt="img1">
+                        <div class="dealer_position">
+                            <img src="error.gif" onerror="this.style.display='none'" alt="blank">
                         </div>
                     </div>
                     <div class="cont">
