signup-login+mediaquery

--- a/publish/signup-login.html
+++ b/publish/signup-login.html
@@ -36,6 +36,7 @@
                         <input type="checkbox"><span>I'm not a robot</span>
                     </p>
                     <button type="submit" class="button button_block">로그인</button>
+                    <button type="button" class="button hide">다른 로그인</button>
                     <p class="field_wrap find">
                         <a href="#" class="find_id">아이디 찾기</a>
                         <a href="#" class="find_pw">비밀번호 찾기</a>
