--- a/publish/signup-login.html
+++ b/publish/signup-login.html
@@ -17,7 +17,7 @@
     <section class="form">
 
         <h1 class="form_logo">
-            <a href="#home"><img src="./common/img/logo.svg" alt="logo"></a>
+            <a href="./index.html"><img src="./common/img/logo.svg" alt="logo"></a>
         </h1>
 
         <article class="tab_con">
@@ -87,7 +87,6 @@
             <li class="tab active"> <span>처음이신가요?<a href="#signup">회원가입</a></span></li>
             <li class="tab"><a href="#login">로그인</a></li>
         </ul>
-
 </section>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script src="./common/js/signup-login.js"></script>
 
