회원가입아이콘수정+webkit수정

--- a/publish/index.html
+++ b/publish/index.html
@@ -25,7 +25,7 @@
             </form>
             <ul class="top_gnb">
                 <li><a href="./signup-login.html"><i class="login"></i>로그인</a></li>
-                <!-- <li><a href="./signup-login.html"><i class="join"></i>회원가입</a></li> -->
+                <li><a href="./signup-login.html"><i class="join"></i>회원가입</a></li>
                 <li><a href="#service"><i class="service"></i>고객센터</a></li>
             </ul>
         </article>
