--- a/publish/signup-login.html
+++ b/publish/signup-login.html
@@ -8,10 +8,8 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
     <link rel="stylesheet" href="./common/css/reset.css">
-    <link rel="stylesheet" href="./common/css/common.css">
+    <link rel="stylesheet" href="./common/css/signup-login.css">   
     <link rel="stylesheet" href="./common/css/style.css">
-    <link rel="stylesheet" href="./common/css/media.css">
-    <link rel="stylesheet" href="./common/css/signup-login.css">    
 </head>
 <body>
     <section class="form">
@@ -88,7 +86,7 @@
             <li class="tab"><a href="#login">로그인</a></li>
         </ul>
 </section>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script src="./common/js/signup-login.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script><script src="./common/js/signup-login.js"></script>
 
     
 </body>
